--- a/documentation/documents/customizing/full_text/index.html
+++ b/documentation/documents/customizing/full_text/index.html
@@ -70,7 +70,7 @@
 
             <div class="col-md-3" id="leftCol">
 
-                <img src="http://jasperfx.github.io/marten/content/images/emblem.png" width="80%" align="middle" />
+                <img src="/content/images/emblem.png" width="80%" align="middle" />
                 <br />
                 <ul class="nav nav-stacked affix" id="sidebar"></ul>
                 <h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/customizing/gin_or_gist_index">Gin or Gist Indexes</a></p>
@@ -162,8 +162,8 @@ To group multiple properties into single index you need to specify the same valu
 </body>
 
 <foot>
-    <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type='text/javascript' src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/marten/content/prism.js"></script>
     <script type="text/javascript" src="/marten/content/sidebar.js"></script>
     <script type="text/javascript" src="/marten/content/affix.js"></script>
