--- a/documentation/documents/diagnostics/index.html
+++ b/documentation/documents/diagnostics/index.html
@@ -70,7 +70,7 @@
 
             <div class="col-md-3" id="leftCol">
 
-                <img src="http://jasperfx.github.io/marten/content/images/emblem.png" width="80%" align="middle" />
+                <img src="/content/images/emblem.png" width="80%" align="middle" />
                 <br />
                 <ul class="nav nav-stacked affix" id="sidebar"></ul>
                 <h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/command-timeouts">Command Timeouts</a></p>
@@ -92,7 +92,7 @@
 <p>Marten has a facility for listening and even intercepting document persistence events with the <code>IDocumentSessionListener</code> interface:</p>
 <pre><code class="language-csharp">&#xD;&#xA;public interface IDocumentSessionListener&#xD;&#xA;{&#xD;&#xA;    void BeforeSaveChanges(IDocumentSession session);&#xD;&#xA;&#xD;&#xA;    Task BeforeSaveChangesAsync(IDocumentSession session, CancellationToken token);&#xD;&#xA;&#xD;&#xA;    void AfterCommit(IDocumentSession session, IChangeSet commit);&#xD;&#xA;&#xD;&#xA;    Task AfterCommitAsync(IDocumentSession session, IChangeSet commit, CancellationToken token);&#xD;&#xA;&#xD;&#xA;    void DocumentLoaded(object id, object document);&#xD;&#xA;&#xD;&#xA;    void DocumentAddedForStorage(object id, object document);&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;</code></pre>
 <p>You can build and inject your own listeners by adding them to the <code>StoreOptions</code> object you use to configure a <code>DocumentStore</code>:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var stub1 = new StubDocumentSessionListener();&#xD;&#xA;var stub2 = new StubDocumentSessionListener();&#xD;&#xA;&#xD;&#xA;using (var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;    _.AutoCreateSchemaObjects = AutoCreate.All;&#xD;&#xA;&#xD;&#xA;    _.Listeners.Add(stub1);&#xD;&#xA;    _.Listeners.Add(stub2);&#xD;&#xA;}))&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;var stub1 = new StubDocumentSessionListener();&#xD;&#xA;var stub2 = new StubDocumentSessionListener();&#xD;&#xA;&#xD;&#xA;using (var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;    _.AutoCreateSchemaObjects = AutoCreate.All;&#xD;&#xA;}))&#xD;&#xA;</code></pre>
 <p>The listeners can be used to modify an <code>IDocumentSession</code> and its related unit of work just before persisting. Marten itself will be using this mechanism
 internally to perform projections in the future.</p>
 <p>The following fake, sample listener demonstrates how you can query into the pending changes before making a transactional commit, and also how to
@@ -158,8 +158,8 @@ just understand what kinds of operations are being chatty in the first place. To
 </body>
 
 <foot>
-    <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type='text/javascript' src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/marten/content/prism.js"></script>
     <script type="text/javascript" src="/marten/content/sidebar.js"></script>
     <script type="text/javascript" src="/marten/content/affix.js"></script>
