--- a/documentation/postgres/naming/index.html
+++ b/documentation/postgres/naming/index.html
@@ -70,7 +70,7 @@
 
             <div class="col-md-3" id="leftCol">
 
-                <img src="http://jasperfx.github.io/marten/content/images/emblem.png" width="80%" align="middle" />
+                <img src="/content/images/emblem.png" width="80%" align="middle" />
                 <br />
                 <ul class="nav nav-stacked affix" id="sidebar"></ul>
                 <h3 class="no-margin">Next</h3><p><a href="/marten/documentation/postgres/escaping">Escaping</a></p>
@@ -125,7 +125,7 @@ from INFORMATION_SCHEMA.COLUMNS
 where table_name = 'product';
 </code></pre>
 <p>You can see from the screen grab that the table and columns are stored lowercase.</p>
-<p><img src="/documentation/content/images/postgres-table-definition.png" alt="" /></p>
+<p><img src="/content/images/postgres-table-definition.png" alt="" /></p>
 
                 </div>
                 <hr />
@@ -143,8 +143,8 @@ where table_name = 'product';
 </body>
 
 <foot>
-    <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type='text/javascript' src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/marten/content/prism.js"></script>
     <script type="text/javascript" src="/marten/content/sidebar.js"></script>
     <script type="text/javascript" src="/marten/content/affix.js"></script>
