--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <img src="https://jasperfx.github.io/marten/content/images/banner.png" width="80%" align="middle" />
+            <img src="/content/images/banner.png" width="80%" align="middle" />
             <h1 style="color:white">Marten</h1>
             <h3>PostgreSQL as Document Db &amp; Event Store for .NET Development</h3>
             <h2>Polyglot Persistence for .NET Systems using the Rock Solid PostgreSQL Database</h2>
