--- a/documentation/postgres/if-statements/index.html
+++ b/documentation/postgres/if-statements/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" role="banner">
         <div class="container">
             <div class="navbar-header">
-                <a href="/" class="navbar-brand">Marten </a>
+                <a href="/" class="navbar-brand">Marten 3.10.0</a>
             </div>
             <nav class="collapse navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav pull-right">
@@ -70,7 +70,7 @@
 
             <div class="col-md-3" id="leftCol">
 
-                <img src="http://jasperfx.github.io/marten/content/images/emblem.png" width="80%" align="middle" />
+                <img src="/content/images/emblem.png" width="80%" align="middle" />
                 <br />
                 <ul class="nav nav-stacked affix" id="sidebar"></ul>
                 <h3 class="no-margin">Next</h3><p><a href="/documentation/postgres/dates">Working with Dates</a></p>
@@ -154,8 +154,8 @@ CREATE TABLE IF NOT EXISTS Product (….
 </body>
 
 <foot>
-    <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type='text/javascript' src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type='text/javascript' src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/content/prism.js"></script>
     <script type="text/javascript" src="/content/sidebar.js"></script>
     <script type="text/javascript" src="/content/affix.js"></script>
